# lucid-gtk

./: CHANGELOG.md  Makefile  README.md  compile-resources.sh  lucid-gtk.cabal
app/: Main.hs
csrc/: resources.c
gui/: AppState.hs  ConvertView.hs  ConvertView.ui  Main.hs  MainWindow.hs  resources.xml  vsdark.xml
src/Lucid/: Combinators.hs  Generate.hs  Sanitize.hs  Supplemental.hs
