cabal-version:      3.4
name:               lucid-gtk
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             sigrdrifa
maintainer:         sig@eldr.io
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Lucid.Generate
      Lucid.Sanitize
      Lucid.Combinators
      Lucid.Supplemental
    build-depends:    
      base ^>=4.17.2.1
      , containers >=0.3
      , directory >=1.0
      , filepath >=1.1
      , lucid >=2.9.9
      , tagsoup >=0.14.1
      , text >=0.11
    hs-source-dirs:   src
    default-language: GHC2021

executable lucid-gtk
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        lucid-gtk

    hs-source-dirs:   app
    default-language: GHC2021

executable lucid-gtk-ui
    import: warnings
    main-is: Main.hs
    c-sources: csrc/resources.c
    default-language: GHC2021
    ghc-options: -Wall -fno-warn-unused-do-bind -threaded -with-rtsopts=-N
    other-modules:
      AppState
      MainWindow
      ConvertView
    hs-source-dirs: gui
    build-depends:
      base ^>=4.17.2.1
      , lucid-gtk
      , gi-glib 
      , gi-gtk
      , gi-adwaita
      , gi-gobject
      , gi-gio
      , text
      , haskell-gi-base

